--- a/parking/templates/userlogin.html
+++ b/parking/templates/userlogin.html
@@ -176,7 +176,7 @@ hr {
 
 <div class="bg-image"></div>
      <div class="bg-heading">
-        <h2 style="font-size:50px">SecurePark: Parking Booking</h2>
+        <h2 style="font-size:50px">SecurePark: Parking Booking User login</h2>
      </div>
 <div class="bg-text">
   <h1 style="font-size:35px; font-family:helvetica;"> Log In </h1>
@@ -189,7 +189,7 @@ hr {
     <input type="password" style="font-size:20px;border-radius: 25px;" name="password"><br><br>
     <input class="registerbtn" type="submit" style="font-size:15px" value="Login">
     <br><br>
-    <span style="font-size:25px" class="psw"> Forgot <a href="/forgot/" style="color:yellow" style="font-size:30px">Password?</a></span>
+  
 </form>
     <br>
     <div class="form-group">
@@ -205,11 +205,6 @@ hr {
         </div>
 
 </div>
-<div class="bg-detail">
-    <h3>Designed by:</h3>
-    <p>Lakshy Gupta</p>
-    <p>Ritik Miglani</p>
-    <p>Diksha</p>
-</div>
+
 </body>
 </html>
