--- a/parking/templates/home.html
+++ b/parking/templates/home.html
@@ -218,7 +218,7 @@ body{
         <div class="box">
         <div class="w3-container w3-center w3-animate-zoom">
           <a href="/index/" style="margin-top:210px;" class="btn btn-white btn-animation-1">LOGIN</a> <a href="/signup/" style="margin-left:2em;" class="btn btn-white btn-animation-1">SIGNUP</a> <br><br><br>
-          <a href="/userentry/" style="margin-top:210px;" class="btn btn-white btn-animation-1">Guest</a>
+          <a href="/userlogin/" style="margin-top:210px;" class="btn btn-white btn-animation-1">User Login</a>
           <a href="/contactus/" class="btn btn-white btn-animation-1">Contact us</a>   <a href="complaint" style="margin-left:2em;" class="btn btn-white btn-animation-1">Complaints</a> <br><br><br>
           <a href="/aboutus/" class="btn btn-white btn-animation-1">About us</a>   <a href="/maps/" style="margin-left:2em;"  class="btn btn-white btn-animation-1">Maps</a>
         </div>
