--- a/parking/templates/userlogin.html
+++ b/parking/templates/userlogin.html
@@ -15,7 +15,7 @@ body, html {
 
 .bg-image {
 
-  background-image: url("https://login.gov/assets/img/login-gov-288x288.png");
+  background-image: url("https://thumbs.dreamstime.com/b/empty-parking-lot-24671764.jpg");
 
 
   filter: blur(8px);
