--- a/parking/templates/home.html
+++ b/parking/templates/home.html
@@ -8,7 +8,7 @@ body {
 }
 body {
 	margin: 0;
-	background-image: url("https://thumbs.dreamstime.com/b/empty-parking-lot-24671764.jpg");
+	background-image: url("https://s1.1zoom.me/big0/660/Shelby_Super_Cars_White_background_White_559662_1280x853.jpg");
 	background-repeat: no-repeat;
 	background-attachment: fixed;
     background-size: 100% 100%;
